[TASK] Remove usage of extbase from HelpController
Improve the performance by removing usage of extbase from the
HelpController.

Resolves: #84331
Releases: master
Change-Id: I3b7d82c1765a4888bd84d6938a65c546a25ba9d1
Reviewed-on: https://review.typo3.org/56247
Tested-by: TYPO3com <no-reply@typo3.com>
Reviewed-by: Anja Leichsenring <aleichsenring@ab-softlab.de>
Tested-by: Anja Leichsenring <aleichsenring@ab-softlab.de>
Reviewed-by: Andreas Wolf <andreas.wolf@typo3.org>
Tested-by: Andreas Wolf <andreas.wolf@typo3.org>

--- a/Resources/Private/Partials/TableOfContents.html
+++ b/Resources/Private/Partials/TableOfContents.html
@@ -1,3 +1,5 @@
+<html xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers">
+
 <h1>
 	<f:translate key="LLL:EXT:documentation/Resources/Private/Language/locallang_view_help.xlf:manual_title" />
 </h1>
@@ -23,7 +25,9 @@
 									<a href="#{module}">{module}</a>
 								</f:then>
 								<f:else>
-									<f:link.action action="detail" arguments="{table:module,field:'*'}">{title}</f:link.action>
+									<a href="{be:moduleLink(route:'help_cshmanual',arguments:{action:'detail', table:module,field:'*'})}">
+										{title}
+									</a>
 								</f:else>
 							</f:if>
 						</li>
@@ -33,3 +37,5 @@
 		</f:for>
 	</ul>
 </f:if>
+
+</html>
